# llm_study

./: .gitignore  BUILD  README.md  pants.toml  pyproject.toml  ruff.toml
src/: BUILD  util.py
src/tokens/: bpe.py  gpt4.py  regex_tokenizer.py
src/tokens/tests/: BUILD  bpe_test.py  regex_tokenizer_test.py  test_text.txt  test_text_special_char.txt
src/transformer/: BUILD  bigram_language_model.py  data_loader.py  training_data.txt  transformer.py
