[tool.poetry]
name = "llm_study"
version = "0.0.1"
description = "Self study on various learning models"
authors = ["Randy Zhang <randywzhang@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"
tiktoken = "^0.1.1"
jax = "^0.4.25"
ruff = "^0.2.2"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-unordered = "^0.5.2"

[tool.black]
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
