[tool.poetry]
name = "llm_study"
version = "0.0.1"
description = "Self study on various learning models"
authors = ["Randy Zhang <randywzhang@gmail.com>"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"
tiktoken = "^0.1.1"
"nvidia-cublas-cu12[cuda12-pip]" = "^12.4.5.8"
"nvidia-cuda-cupti-cu12[cuda12-pip]" = "^12.4.127"
"nvidia-cuda-nvcc-cu12[cuda12-pip]" = "^12.4.131"
"nvidia-cuda-runtime-cu12[cuda12-pip]" = "^12.4.127"
"nvidia-cudnn-cu12[cuda12-pip]" = "^8.9.7.29"
"nvidia-cufft-cu12[cuda12-pip]" = "^11.2.1.3"
"nvidia-cusolver-cu12[cuda12-pip]" = "^11.6.1.9"
"nvidia-nccl-cu12[cuda12-pip]" = "^2.21.5"
"jaxlib[cuda12-pip]" = "^0.4.25"
"jax[cuda12-pip]" = "^0.4.25"
ruff = "^0.2.2"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-unordered = "^0.5.2"

[tool.black]
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
